# libsetsync

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure-dev  configure.ac  mkversion.sh  setsync.pc.in
bloom/: BloomFilter.cpp  CountingBloomFilter.cpp  CountingBloomFilter.h  Makefile.am
debian/: control  rules
doc/: setsync.doxyfile
setsync/: .gitignore  BerkeleyDBTableUserInterface.cpp  BerkeleyDBTableUserInterface.h  Config.cpp  Config.h  Configuration.cpp  Configuration.h  DbSet.cpp  DbSet.h  DiffHandler.cpp  DiffHandler.h  Makefile.am  MemSet.cpp  MemSet.h  Packets.cpp  Packets.h  Set.cpp  Set.hpp  SyncStrategy.cpp  SyncStrategy.h  Synchronization.cpp  Synchronization.h  Trie.cpp  Trie.h  main.c  set.c  set.h  sha1.c  sha1.h
setsync/bloom/: BdbBloomFilter.cpp  BdbBloomFilter.h  BloomFilter.cpp  BloomFilter.h  ComparableBloomFilter.h  CountingBloomFilter.cpp  CountingBloomFilter.h  DBBloomFilter.cpp  DBBloomFilter.h  DoubleHashingScheme.cpp  DoubleHashingScheme.h  FSBloomFilter.cpp  FSBloomFilter.h  HashFunction.cpp  HashFunction.h  KeyValueCountingBloomFilter.cpp  KeyValueCountingBloomFilter.h  Makefile.am  SQLiteBloomFilter.cpp  SQLiteBloomFilter.h  bloom.c  bloom.h
setsync/config/: Configuration.cpp  Configuration.h  Makefile.am
setsync/crypto/: CryptoHash.cpp  CryptoHash.h  Makefile.am  md.c  md_wrap.c  md_wrap.h  sha1.c  sha2.c
setsync/index/: AbstractSetIndex.cpp  AbstractSetIndex.h  BdbIndex.cpp  BdbIndex.h  DbIndex.cpp  DbIndex.h  KeyValueIndex.cpp  KeyValueIndex.h  Makefile.am  MemIndex.cpp  MemIndex.h  SQLiteDatabase.cpp  SQLiteException.cpp  SQLiteException.h  SQLiteIndex.cpp  SQLiteIndex.h
setsync/net/: Makefile.am  PacketParser.cpp  PacketParser.h  Packets.cpp  Packets.h
setsync/storage/: BdbStorage.cpp  BdbStorage.h  BdbTableUser.cpp  BdbTableUser.h  KeyValueStorage.cpp  KeyValueStorage.h  LevelDbStorage.cpp  LevelDbStorage.h  Makefile.am  MemStorage.cpp  MemStorage.h  StorageException.cpp  StorageException.h
setsync/sync/: Makefile.am  Progress.cpp  Progress.h  Synchronization.cpp  Synchronization.h
setsync/tests/: Makefile.am
setsync/tests/evaluation/: .gitignore  BDBInsertRemoveTest.cpp  BDBInsertRemoveTest.h  BDBTransactionsTest.cpp  BDBTransactionsTest.h  BFTest.cpp  BFTest.h  BloomFilterDiff.cpp  BloomFilterDiff.h  CryptoBenchmark.cpp  CryptoBenchmark.h  DBTest.cpp  DBTest.h  LevelDbTest.cpp  LevelDbTest.h  Main.cpp  Makefile.am  SHA1Generator.cpp  SQLiteDatabase.cpp  SQLiteDatabase.h  SQLiteTest.cpp  SQLiteTest.h  SetSync.cpp  SetSync.h  SetSyncMain.cpp  SetTest.cpp  SetTest.h  SpeedTest.cpp  SpeedTest.h  StopWatch.cpp  StopWatch.h  Test.h  eval-bf-p-100-10000-md5.sh  eval-bf-p-100-10000-sha1.sh  eval-bf-p-10000-md5.sh  eval-bf-p-10000.sh  eval-bf-p-error-50-a-100-10000-md5.sh  eval-bf-p-error-50-a-100-10000-sha1.sh  eval-bftest-p-100-10000-md5.sh  eval-bftest-p-100-10000-sha1.sh  (+33 more)
setsync/tests/hash_generator/: BFTest.cpp  BFTest.h  DBTest.cpp  DBTest.h  Main.cpp  Makefile.am  SHA1Generator.cpp  SHA1Generator.h  SQLiteDatabase.cpp  SQLiteDatabase.h  SQLiteTest.cpp  Test.h
setsync/tests/unittests/: .gitignore  BdbBloomFilterTest.cpp  BdbBloomFilterTest.h  BdbIndexTest.cpp  BdbIndexTest.h  BdbSetTest.cpp  BdbSetTest.h  BdbTrieTest.cpp  BdbTrieTest.h  BloomFilterTest.cpp  BloomFilterTest.h  DBBloomFilterTest.cpp  DBBloomFilterTest.h  DBTrieTest.cpp  DBTrieTest.h  DbIndexTest.cpp  DbIndexTest.h  DbSetTest.cpp  DbSetTest.h  DiffHandlerTest.cpp  DiffHandlerTest.h  DoubleHashingSchemeTest.cpp  DoubleHashingSchemeTest.h  FSBloomFilterTest.cpp  FSBloomFilterTest.h  FSTrieTest.cpp  FSTrieTest.h  KeyValueCountingBloomFilterTest.cpp  KeyValueCountingBloomFilterTest.h  KeyValueIndexTest.cpp  KeyValueIndexTest.h  KeyValueStorageTest.cpp  KeyValueStorageTest.h  KeyValueTrieTest.cpp  KeyValueTrieTest.h  LevelDbStorageTest.cpp  LevelDbStorageTest.h  LevelDbTrieTest.cpp  LevelDbTrieTest.h  Main.cpp  (+15 more)
setsync/trie/: BdbTrie.cpp  BdbTrie.h  DBTrie.cpp  DBTrie.h  FSTrie.cpp  FSTrie.h  KeyValueTrie.cpp  KeyValueTrie.h  LevelDbTrie.cpp  LevelDbTrie.h  Makefile.am  MemTrie.cpp  MemTrie.h  SQLiteTrie.cpp  SQLiteTrie.h  Trie.cpp  Trie.h  TrieException.h
setsync/utils/: BerkeleyDB.cpp  BerkeleyDB.h  CryptoHash.cpp  CryptoHash.h  FileSystem.cpp  FileSystem.h  Makefile.am  OutputFunctions.cpp  OutputFunctions.h  bitset.h  md.c  md2.c  md4.c  md5.c  sha4.c  test.c
tools/: .gitignore  Makefile.am  Trie2Dot.cpp  Trie2Dot.h
